--- a/app/src/main/res/layout/reminders.xml
+++ b/app/src/main/res/layout/reminders.xml
@@ -23,17 +23,34 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
-<!--    <ImageView-->
-<!--        android:layout_width="150dp"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:src="@drawable/logo"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:contentDescription="@string/app_logo"/>-->
-
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/reminders"/>-->
+    <LinearLayout
+        android:id="@+id/empty_view"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:padding="@dimen/general_padding">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/empty"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/small_padding"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/nothing_to_see"
+            android:layout_marginBottom="@dimen/small_padding"
+            android:gravity="center" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/reminders_empty_view"
+            android:layout_marginBottom="@dimen/small_padding"
+            android:gravity="center"/>
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_reminder"
