--- a/app/src/main/res/layout/reminders.xml
+++ b/app/src/main/res/layout/reminders.xml
@@ -53,6 +53,16 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/small_padding"
+        android:src="@drawable/baseline_refresh_white_24"
+        android:layout_above="@+id/add_reminder"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
