--- a/app/src/main/res/layout/content_pet_search_entry.xml
+++ b/app/src/main/res/layout/content_pet_search_entry.xml
@@ -3,23 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <LinearLayout android:orientation="horizontal"
+    android:orientation="vertical"
+    android:padding="@dimen/small_padding">
+    
+    <TextView
+        android:id="@+id/pet_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search_pet_name_res"
-            android:textStyle="bold"
-            android:layout_marginEnd="@dimen/text_gap"
-            android:layout_marginRight="@dimen/text_gap"/>
-        <TextView
-            android:id="@+id/pet_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:textStyle="bold"
+        android:textSize="20sp" />
 
     <LinearLayout android:orientation="horizontal"
         android:layout_height="wrap_content"
@@ -91,20 +83,10 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <LinearLayout android:orientation="horizontal"
+    <TextView
+        android:id="@+id/pet_address"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search_street_address"
-            android:textStyle="bold"
-            android:layout_marginEnd="@dimen/text_gap"
-            android:layout_marginRight="@dimen/text_gap"/>
-        <TextView
-            android:id="@+id/pet_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:textStyle="italic"/>
 
 </LinearLayout>
