--- a/app/src/main/res/layout/content_residence_search_entry.xml
+++ b/app/src/main/res/layout/content_residence_search_entry.xml
@@ -5,21 +5,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout android:orientation="vertical"
+    <TextView
+        android:id="@+id/street_address"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search_street_address"
-            android:textStyle="bold"
-            android:layout_marginEnd="@dimen/text_gap"
-            android:layout_marginRight="@dimen/text_gap"/>
-        <TextView
-            android:id="@+id/street_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:textSize="20sp"
+        android:textStyle="italic"/>
+
 
     <LinearLayout android:orientation="horizontal"
         android:layout_height="wrap_content"
