--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -22,7 +22,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/scoll"
+            android:id="@+id/scroll"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
             <LinearLayout
@@ -142,7 +142,7 @@
             android:id="@+id/result_residences"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/scoll"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
             android:paddingLeft="@dimen/general_padding"
             android:paddingRight="@dimen/general_padding"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -155,7 +155,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/scoll"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
             android:padding="@dimen/general_padding">
             <ImageView
                 android:layout_width="wrap_content"
