--- a/app/src/main/res/layout/remove_animal_content.xml
+++ b/app/src/main/res/layout/remove_animal_content.xml
@@ -5,7 +5,7 @@
     android:padding="@dimen/small_padding">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
